shifted some divs

--- a/taxi.html
+++ b/taxi.html
@@ -41,7 +41,7 @@
         <th>Taxi trips</th>
         <th>Taxi Fare</th>
         <th>Total price</th>
-        <!-- <th>Taxis remaining</th> -->
+        <!-- <th>Taxis available</th> -->
     </tr>
 
     <tr>
